# github-log

./: Jenkinsfile  README.md  pyproject.toml
src/github_log/: __init__.py
