[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

      
[tool.hatch.build.targets.wheel]
packages = ["src/github_log"]

[project]
name = "github_log"
version = "1.0.0"
description = "Get a recap of your day on GitHub"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
gh-log = "github_log:main"
